    invalid input devices.
  * Typo fixed from --help output.
  * Commandline parser improved.
  * Removed pipe trick from sensormanager which was used to switch thread from
    adaptor thread to Qt eventloop thread.
  * SocketHandler now writes all data to socket with single write().
  * SocketHandler::SessionData is now thread-safe.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Wed, 10 Nov 2010 11:54:31 +0200

sensord (0.6.31) unstable; urgency=low

  [Timo Rongas]
  * Temporary axis direction switch in magnetometer and accelerometer
    adaptors.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Wed, 10 Nov 2010 09:59:08 +0200

sensord (0.6.30) unstable; urgency=low

  [Antti Virtanen]
  * Optimized logger streaming ops to do nothing when used loglevel wouldn't log anything.

  [Timo Rongas]
  * Renamed Screen.IsFlat context property to Position.IsFlat as requested.

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 09 Nov 2010 13:09:12 +0300

sensord (0.6.29) unstable; urgency=low

  [Timo Rongas]
  * Added examples for writing new plugins.
  * Fixes: NB#202993 - Screen.TopEdge property must not go to unspecified state, new property required for device lying flat

  [Antti Virtanen]
  * Optimized SensorManager QMap usage by using iterators.
  * SensorManager::printStatus() segfaulted when sensorInstanceEntry had no users.
  * SocketHandler::clearInterval() fixed. It erased whole session entry
    instead of just setting the interval back to default.

  [Lihan Guo]
  * Fixes: NB#186211 - During an ongoing alarm notification, when a device placed flat is lifted up rapidly it snoozes the alarm

 -- Timo Rongas <ext-timo.2.rongas@nokia.com>  Tue, 26 Oct 2010 09:12:58 +0300

sensord (0.6.28) unstable; urgency=low

  [Antti Virtanen]
  * Implemented interval downsampling. [Fixes: NB#196513].
  * SysfsAdaptorReader fetched incorrectly fd passed to processSample(). [Fixes: NB#180060].